Cleanup of formatting, fix some AI corrupted code files. mvn clean process-resources should get through to distribution projects now.